--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,3 +8,7 @@ id = "42b3d8e238164f89966d351af22e5958"
 
 [triggers]
 crons = ["*/30 * * * *"]
+
+[[routes]]
+pattern = "now-playing.eyrin.jp"
+custom_domain = true
